# resonarium

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  python-bindings.md
.github/workflows/: build-sign-release.yml  build.yaml
ci/: build.sh
plugin/Resources/: tooltips.json
plugin/Resources/Presets/: Abandoned Church Bells.xml  Acid from Outer Space!!.xml  Acid from Outer Space.xml  Andromedean Bells.xml  Bamboozled.xml  Bells I.xml  Colour Out of Space.xml  Dune Dirge.xml  Garden of Unearthly Delights.xml  Harmonious Ascendence.xml  Machine Hearts.xml  Modal Keys I.xml  Modal Keys II.xml  Modal Keys.xml  Netherstorm.xml  Raindrops from the Other Side.xml  Shreddin' Guitar.xml  Shreddin' Mk. I.xml  Soft Cascade.xml  TH-XXX.xml  The World Unsundered.xml  Took Too Much Train.xml  Waterphone.xml  Wood to Brass.xml  Wooden Bells.xml
plugin/Resources/Presets_old/: Acid from Outer Space!!.xml  Bamboozled.xml  Colour Out of Space.xml  Digital Ascent.xml  I can't believe it's not Psytrance!.xml  Live from YouTube! ).xml  Louie's Strings.xml  Modal Keys I.xml  Modal Keys II.xml  Panned Pots And Pans.xml  Phastic Square Pluck.xml  Simple Bass.xml  TH-XXX 2.0.xml  TH-XXX 3.0.xml  Took Too Much Train.xml
plugin/Source/: Exciters.cpp  Exciters.h  Filters.cpp  Filters.h  GlobalState.h  ModalResonatorBank.cpp  ModalResonatorBank.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ResonariumPy.cpp  Resonator.cpp  Resonator.h  ResonatorBank.cpp  ResonatorBank.h  ResonatorSynth.cpp  ResonatorSynth.h  ResonatorVoice.cpp  ResonatorVoice.h  StereoResonator.cpp  StereoResonator.h  WaveguideResonatorBank.cpp  WaveguideResonatorBank.h  defines.h
plugin/Source/dsp/: Distortion.cpp  Distortion.h  EQThree.cpp  EQThree.h  Filters.cpp  Filters.h  MVerb.h  MultiAmp.cpp  MultiAmp.h  MultiDelay.cpp  MultiDelay.h  MultiFilter.cpp  MultiFilter.h  NormalizedSVF.cpp  NormalizedSVF.h  ResonariumEffectChain.cpp  ResonariumEffectChain.h  Sampler.cpp  Sampler.h  WrappedSVF.cpp  WrappedSVF.h
plugin/Source/dsp/airwindows/: BassAmp.cpp  BassAmp.h  BassAmpProc.cpp  BigAmp.cpp  BigAmp.h  BigAmpProc.cpp  DeRez2.cpp  DeRez2.h  DeRez2Proc.cpp  FXBase.h  FireAmp.cpp  FireAmp.h  FireAmpProc.cpp  GrindAmp.cpp  GrindAmp.h  GrindAmpProc.cpp  LeadAmp.cpp  LeadAmp.h  LeadAmpProc.cpp
plugin/Source/ui/: AnimatedScrollBarsViewport.cpp  AnimatedScrollBarsViewport.h  ClickThruSelect.cpp  ClickThruSelect.h  Delay.cpp  Delay.h  Panels.h  RandomLFOComponent.cpp  RandomLFOComponent.h  ResonariumComponents.cpp  ResonariumComponents.h  ResonariumLookAndFeel.cpp  ResonariumLookAndFeel.h  SampleDropperComponent.cpp  SampleDropperComponent.h  SettingsPanel.cpp  SettingsPanel.h  TextSlider.cpp  TextSlider.h
plugin/Source/util/: InterpolatedParameter.h  InterpolatedValue.h  RandomLFO.cpp  RandomLFO.h  ResonariumUtilities.cpp  ResonariumUtilities.h  StereoLFOWrapper.cpp  StereoLFOWrapper.h  StereoMSEG.cpp  StereoMSEG.h  StereoMSEGWrapper.cpp  StereoMSEGWrapper.h  TooltipManager.cpp  TooltipManager.h  WrappedEnvelope.cpp  WrappedEnvelope.h
python-examples/: processor-voice-comparison.py  simple-demo.py
